--- a/src/sass/layouts/_lightbox.scss
+++ b/src/sass/layouts/_lightbox.scss
@@ -3,7 +3,7 @@
 .lightbox-main-wrapper {
     position: absolute;
     top: 0;
-    width: 100vw;
+    width: 100%;height: 300vh;
     display: flex;
     background: rgba(196, 196, 196, 0.8);
     z-index:5;
