--- a/src/sass/base/_fonts.scss
+++ b/src/sass/base/_fonts.scss
@@ -6,13 +6,13 @@
     font-family:'DMSans-regular';
     src: url(assets/fonts/DMSans-regular.ttf) format('ttf');
     src: url(assets/fonts/DMSans-regular.eot) format('eot');
-    src: url(assets/fonts/DMSans-regular.woff) format('woff');
+  /*   src: url(assets/fonts/DMSans-regular.woff) format('woff'); */
 }
 @font-face { 
     font-family:'DMSans-medium';
     src: url(assets/fonts/DMSans-medium.ttf) format('ttf');
     src: url(assets/fonts/DMSans-medium.eot) format('eot');
-    src: url(assets/fonts/DMSans-medium.woff) format('woff');
+    /* src: url(assets/fonts/DMSans-medium.woff) format('woff'); */
 }
 @font-face { 
     font-family:'DMSans-bold';
